<resources>
    <string name="app_name">TrainTimer</string>
    <string name="hint">search</string>
    <string name="action_settings">Settings</string>
    <string name="name">Enter workout name</string>
    <string name="relax_time">Enter relax time</string>
    <string name="playlist">Enter playlist name</string>
    <string name="song">Enter song name</string>
    <string name="playlist_radio">Playlist</string>
    <string name="song_radio">Song</string>
    <string name="no_music_radio">No music</string>
    <string name="more_info">Enter additional information</string>
    <string name="new_set">Create set</string>
    <string name="submit">Submit</string>
    <string name="time_alert">Please select time</string>
    <string name="picker">Enter by hand</string>
    <string name="chrono">Count with timer</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="start_alert">Please click "Start" button first</string>
    <string name="exercise_name_alert">Please enter workout name</string>
    <string name="relax_time_alert">Please enter relax time</string>
    <string name="set_alert">Please add at least one set</string>
    <string name="tag">tag</string>
    <string name="key_minutes">minutes</string>
    <string name="key_seconds">seconds</string>
    <string name="key_sets">sets</string>
    <string name="key_relax_time">relaxTime</string>
    <string name="key_adapter">adapter</string>
    <string name="key_chronometer_state">isStarted</string>
    <string name="key_chronometer_stop">stop</string>
    <string name="key_chronometer_base">base</string>
    <string name="application_id">Ti3o4kOiApXdbSsGu5zaH0g6ph34ZgxycpqtOaoV</string>
    <string name="client_key">YSOCJZmKNYnsDBcayogq8wdU9jsdbLnfvcwuyudm</string>
    <string name="key_account">com.example.pro.traintimer.account</string>
    <string name="key_app">com.example.pro.traintimer</string>
    <string name="login_text">Please enter one of your email addresses from your device account emails.</string>
    <string name="email">Enter email</string>
    <string name="sign_up">Sign Up</string>
    <string name="email_alert">Please enter email</string>
    <string name="email_incorrect">Incorrect email address</string>
    <string name="password">password</string>
    <string name="internet">Check internet connection</string>
    <string name="key_email">email</string>
    <string name="key_playlist_name">playname</string>
    <string name="key_song_name">songname</string>
    <string name="key_info">info</string>
    <string name="key_exercise_name">exname</string>
    <string name="key_music_option">musicOption</string>
    <string name="add_alert">Something went wrong! Workout has not been added. Check internet connection!</string>
    <string name="table_exercises">Exercises</string>
    <string name="key_search">search</string>
    <string name="key_user">user</string>
    <string name="download_alert">Something went wrong! Workouts has not been downloaded. Check internet connection!</string>
    <string name="delete_alert"> Workouts has not been deleted. Check internet connection!</string>
    <string name="key_array">arr</string>
    <string name="wk_name">Workout name</string>
    <string name="wk_playlist">Playlist</string>
    <string name="wk_song">Song</string>
    <string name="wk_info">Additional information</string>
    <string name="update">Update</string>
    <string name="wk_relax">Relax time duration</string>
    <string name="wk_sets">Sets\' durations</string>
    <string name="key_index">index</string>
    <string name="key_state">state</string>
    <string name="dbName">workoutDB</string>
    <string name="id_column">id</string>
    <string name="name_column">displayName</string>
    <string name="index_column">musicIndex</string>
    <string name="start_column">start</string>
    <string name="playlist_table">playlists</string>
    <string name="running_alert">Warning! Workout can not be updated while it\'s running!</string>
    <string name="update_alert">Something went wrong! Workout has not been updated. Check internet connection!</string>
    <string name="key_checked_radio">checked</string>
</resources>
