<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/wk_name"
            android:layout_margin="@dimen/new_exercise_margin"
            android:background="@color/light_background"
            android:textColor="@color/text_dark_color"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/text_dark_color"
            android:id="@+id/textView_name"
            android:layout_margin="@dimen/new_exercise_margin"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/wk_playlist"
            android:background="@color/light_background"
            android:textColor="@color/text_dark_color"
            android:layout_margin="@dimen/new_exercise_margin"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/text_dark_color"
            android:id="@+id/textView_playlist"
            android:layout_margin="@dimen/new_exercise_margin"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/wk_song"
            android:background="@color/light_background"
            android:textColor="@color/text_dark_color"
            android:layout_margin="@dimen/new_exercise_margin"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/text_dark_color"
            android:id="@+id/textView_song"
            android:layout_margin="@dimen/new_exercise_margin"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/wk_info"
            android:background="@color/light_background"
            android:textColor="@color/text_dark_color"
            android:layout_margin="@dimen/new_exercise_margin"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/text_dark_color"
            android:id="@+id/textView_info"
            android:layout_margin="@dimen/new_exercise_margin"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/wk_relax"
            android:background="@color/light_background"
            android:textColor="@color/text_dark_color"
            android:layout_margin="@dimen/new_exercise_margin"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/text_dark_color"
            android:id="@+id/textView_relax_time"
            android:layout_margin="@dimen/new_exercise_margin"/>
        <RadioGroup
            android:id="@+id/group"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:background="@color/light_background"
            android:textColor="@color/text_dark_color"
            android:layout_margin="@dimen/new_exercise_margin"
            android:layout_height="wrap_content">
            <RadioButton
                android:id="@+id/radio_song"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/song_radio"
                android:layout_margin="@dimen/new_exercise_margin"
                />
            <RadioButton
                android:id="@+id/radio_playlist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/playlist_radio"
                android:layout_margin="@dimen/new_exercise_margin"
                />
            <RadioButton
                android:id="@+id/radio_no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_music_radio"
                android:layout_margin="@dimen/new_exercise_margin"
                />
        </RadioGroup>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <Button
                android:id="@+id/update_but"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/new_exercise_margin"
                android:text="@string/update"
                android:textAllCaps="false"
                android:onClick="update"/>
            <Button
                android:id="@+id/start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/new_exercise_margin"
                android:text="@string/start"
                android:textAllCaps="false"
                android:onClick="start"/>
            <Button
                android:id="@+id/stop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/new_exercise_margin"
                android:text="@string/stop"
                android:textAllCaps="false"
                android:onClick="stop"/>
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/wk_sets"
            android:background="@color/light_background"
            android:textColor="@color/text_dark_color"
            android:layout_margin="@dimen/new_exercise_margin"/>
    </LinearLayout>
</ScrollView>