<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RadioGroup
        android:id="@+id/input_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical">
        <RadioButton
            android:id="@+id/radio_chrono"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chrono"
            android:layout_margin="@dimen/new_exercise_margin"
            />
        <RadioButton
            android:id="@+id/radio_picker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/picker"
            android:layout_margin="@dimen/new_exercise_margin"
            />
    </RadioGroup>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="horizontal" android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <Chronometer
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/chronometer" />

        <Button
            android:id="@+id/start_but"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/new_exercise_margin"
            android:textAllCaps="false"
            android:text="@string/start"/>
        <Button
            android:id="@+id/stop_but"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/new_exercise_margin"
            android:textAllCaps="false"
            android:text="@string/stop"/>
    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="horizontal" android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">
        <NumberPicker
            android:id="@+id/minutes1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/new_exercise_margin">

        </NumberPicker>

        <NumberPicker
            android:id="@+id/seconds1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/new_exercise_margin">

        </NumberPicker>
    </LinearLayout>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="horizontal" android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">
        <Button
            android:id="@+id/set_submit_but"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/new_exercise_margin"
            android:textAllCaps="false"
            android:text="@string/submit"/>
    </LinearLayout>
</LinearLayout>
</ScrollView>